# api/app/controllers/videos_controller.rb
@@ -1,4 +1,6 @@
 class VideosController < ApplicationController
+  include Authenticatable
+
   before_action :authenticate_cliente, only: [:index, :show, :create]
   before_action :set_video, only: %i[show]
 
@@ -51,19 +53,6 @@ class VideosController < ApplicationController
   end
 
   private
-
-  def authenticate_cliente
-    authorization_header = request.headers['Authorization']
-    return render json: { error: 'Token de acesso é obrigatório' }, status: :unauthorized unless authorization_header
-
-    token_type, access_token = authorization_header.split(' ')
-    return render json: { error: 'Formato de token inválido' }, status: :unauthorized unless token_type == 'Bearer' && access_token.present?
-
-    return render json: { error: 'Token inválido ou expirado' }, status: :unauthorized unless CognitoAuth.valid_token?(access_token)
-
-    @cliente = Cliente.authenticate(access_token)
-    return render json: { error: 'Cliente não encontrado' }, status: :not_found unless @cliente
-  end
 
   def set_video
     @video = Video.find(params[:id])
